--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
+
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
         android:layout_height="87dp"
@@ -32,7 +35,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/menufoodName  "
+                android:id="@+id/menuFoodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
@@ -45,21 +48,22 @@
                 app:layout_constraintTop_toTopOf="@+id/Menuimage" />
 
             <TextView
-                android:id="@+id/PricePopular"
+                android:id="@+id/menuPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="40dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="$5"
                 android:textColor="@color/textcolor"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.606"
-                app:layout_constraintStart_toEndOf="@+id/foodNamePopular"
+                app:layout_constraintStart_toEndOf="@+id/menuFoodName"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/addToCartPopular"
+                android:id="@+id/menuAddToCart"
                 android:layout_width="80dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="16dp"
@@ -68,12 +72,12 @@
                 android:gravity="center"
                 android:text="Add To Cart"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="@+id/PricePopular"
+                app:layout_constraintEnd_toEndOf="@+id/menuPrice"
                 app:layout_constraintHorizontal_bias="0.454"
-                app:layout_constraintStart_toStartOf="@+id/PricePopular"
-                app:layout_constraintTop_toBottomOf="@+id/PricePopular" />
+                app:layout_constraintStart_toStartOf="@+id/menuPrice"
+                app:layout_constraintTop_toBottomOf="@+id/menuPrice" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
