--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -24,10 +24,10 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/Menuimage"
+                android:id="@+id/menuImage"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="8dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,34 +38,32 @@
                 android:id="@+id/menuFoodName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="8dp"
                 android:fontFamily="@font/yeonsung"
                 android:text="Food Name"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/Menuimage"
-                app:layout_constraintStart_toEndOf="@+id/Menuimage"
-                app:layout_constraintTop_toTopOf="@+id/Menuimage" />
+                app:layout_constraintBottom_toBottomOf="@+id/menuImage"
+                app:layout_constraintStart_toEndOf="@+id/menuImage"
+                app:layout_constraintTop_toTopOf="@+id/menuImage" />
 
             <TextView
                 android:id="@+id/menuPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="60dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="$5"
                 android:textColor="@color/textcolor"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.606"
-                app:layout_constraintStart_toEndOf="@+id/menuFoodName"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/menuAddToCart"
-                android:layout_width="80dp"
-                android:layout_height="20dp"
+                android:layout_width="93dp"
+                android:layout_height="21dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/addtocart"
                 android:fontFamily="@font/lato_bold"
