--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -50,13 +50,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="40dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="$5"
                 android:textColor="@color/textcolor"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.606"
-                app:layout_constraintStart_toEndOf="@+id/foodNamePopular"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
