--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -66,7 +66,7 @@
                 android:background="@drawable/addtocart"
                 android:fontFamily="@font/lato_bold"
                 android:gravity="center"
-                android:text="Add To Cart"
+                android:text="Them mon"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="@+id/PricePopular"
                 app:layout_constraintHorizontal_bias="0.454"
