--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Cart"
+        android:text="Gio hang"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +34,10 @@
         android:layout_width="325dp"
         android:layout_height="57dp"
         android:layout_marginBottom="16dp"
-        android:textAllCaps="false"
         android:background="@drawable/proceedbutonshape"
         android:fontFamily="@font/yeonsung"
-        android:text="Quy trình"
+        android:text="Dat do an"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
