--- a/app/src/main/res/layout/activity_pay_out.xml
+++ b/app/src/main/res/layout/activity_pay_out.xml
@@ -13,7 +13,7 @@
     android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/button8"
+        android:id="@+id/btnBack"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
         android:textColor="@color/textcolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,8 +71,7 @@
             android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/lato_regular"
-            android:inputType="text"
-            android:text="lorem ipsum" />
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
@@ -111,11 +110,7 @@
             android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/lato_regular"
-            android:inputType="textMultiLine"
-            android:text="NamLorem ipsum is placeholder text
-commonly used in the graphic,
-print, and publishing industries
-for previewing layouts and visual " />
+            android:inputType="textMultiLine" />
     </LinearLayout>
 
     <LinearLayout
@@ -151,8 +146,7 @@ for previewing layouts and visual " />
             android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/lato_regular"
-            android:inputType="text"
-            android:text="123456789" />
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
@@ -225,7 +219,6 @@ for previewing layouts and visual " />
             android:gravity="end"
             android:inputType="none"
             android:paddingEnd="32dp"
-            android:text="5$"
             android:textColor="@color/textcolor"
             android:textSize="20sp" />
     </LinearLayout>
