--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,15 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/editButton"
+            android:backgroundTint="@color/textcolor"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginTop="30dp"
+            android:text="Sua Ho so" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="57dp"
