--- a/app/src/main/res/layout/activity_recent_order_items.xml
+++ b/app/src/main/res/layout/activity_recent_order_items.xml
@@ -12,9 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
-        android:text="Món ăn mua gần đây"
+        android:text="Đơn hàng"
         android:textColor="@color/textcolor"
-        android:textSize="35dp"
+        android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="@+id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backButton"
@@ -22,8 +22,8 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
@@ -42,7 +42,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backButton"
-        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/recent_buy_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
