--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -22,10 +22,10 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Waves Of Food"
+        android:text="Làn Sóng Đồ Ăn"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -36,7 +36,7 @@
         android:layout_height="17dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_bold"
-        android:text="Deliever Favorite Food"
+        android:text="Giao Món Ăn Yêu Thích"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
@@ -49,7 +49,7 @@
         android:layout_height="27dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Sign Up Here"
+        android:text="Đăng Ký Tại Đây"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         android:textSize="20sp"
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_regular"
-        android:text="Or"
+        android:text="Hoặc"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password"
@@ -125,49 +125,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/yeonsung"
-        android:text="Sign Up With"
+        android:text="Đăng Ký Bằng"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/textView15"
         app:layout_constraintStart_toStartOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/facebookButton"
-        android:layout_width="152dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/whitebutton"
-        android:drawableLeft="@drawable/facebook"
-        android:paddingLeft="15dp"
-        android:text="Facebook"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toStartOf="@+id/googleButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/googleButton"
         android:layout_width="152dp"
         android:layout_height="57dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/whitebutton"
         android:drawableLeft="@drawable/google_icon_1"
         android:paddingLeft="15dp"
         android:text="Google"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/facebookButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/creatAccountButton"
         android:layout_width="157dp"
         android:layout_height="57dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/greenbutton"
-        android:text="Create Account"
+        android:text="Tạo Tài Khoản"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,7 +164,7 @@
         android:layout_height="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/lato_bold"
-        android:text="Already Have An Account?"
+        android:text="Chưa Có Tài Khoản?"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         android:textSize="10sp"
