--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,10 +25,10 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Waves Of Food"
+        android:text="Làn Sóng Đồ ăn"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.754"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -40,7 +40,7 @@
         android:layout_height="17dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lato_bold"
-        android:text="Deliever Favorite Food"
+        android:text="Giao Món Ăn Yêu Thích"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -52,7 +52,7 @@
         android:layout_width="72dp"
         android:layout_height="40dp"
         android:layout_marginBottom="36dp"
-        android:text="Design By\n NeatRoots"
+        android:text="Thiết kế \nbởi Thắng"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         app:layout_constraintBottom_toBottomOf="parent"
