--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -18,11 +18,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="258dp"
-        android:layout_height="50dp"
+        android:layout_width="347dp"
+        android:layout_height="73dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Enjoy Restaurant Quality Meals\n at Home"
+        android:text="Thưởng thức những bữa ăn chất lượng\n tại nhà"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -35,7 +35,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="120dp"
         android:background="@drawable/greenbutton"
-        android:text="Next"
+        android:text="Tiếp tục"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -46,7 +46,7 @@
         android:layout_width="72dp"
         android:layout_height="40dp"
         android:layout_marginBottom="36dp"
-        android:text="Design By\n NeatRoots"
+        android:text="Thiết kế \nbởi Thắng"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         android:textSize="14sp"
