--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,14 +17,14 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="242dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Waves Of Food"
+        android:text="Làn Sóng Đồ Ăn"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -115,21 +115,7 @@
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/facebookButton"
-        android:layout_width="152dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/whitebutton"
-        android:drawableLeft="@drawable/facebook"
-        android:fontFamily="@font/lato_bold"
-        android:paddingLeft="15dp"
-        android:text="Facebook"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toStartOf="@+id/googleButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/googleButton"
         android:layout_width="152dp"
@@ -142,8 +128,7 @@
         android:text="Google"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/facebookButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -153,12 +138,12 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/greenbutton"
         android:text="Login"
-        android:textColor="@color/white"
         android:textAlignment="center"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />
+        app:layout_constraintTop_toBottomOf="@+id/googleButton" />
 
     <TextView
         android:id="@+id/donthaveaccount"
@@ -178,7 +163,7 @@
         android:layout_height="36dp"
         android:layout_marginBottom="30dp"
         android:fontFamily="@font/yeonsung"
-        android:text="Thiết kế bởi\nThắng"
+        android:text="Thiết kế \nbởi Thắng"
         android:textColor="@color/textcolor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
