--- a/app/src/main/res/layout/buy_again_item.xml
+++ b/app/src/main/res/layout/buy_again_item.xml
@@ -69,7 +69,7 @@
                 android:layout_marginEnd="32sp"
                 android:background="@drawable/addtocart"
                 android:fontFamily="@font/lato_bold"
-                android:text="Mua lai"
+                android:text="Mua lại"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
