--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,12 +14,21 @@
 
         <Button
             android:id="@+id/editButton"
-            android:backgroundTint="@color/textcolor"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_marginTop="30dp"
-            android:text="Sua Ho so" />
+            android:backgroundTint="@color/textcolor"
+            android:text="Sửa hồ sơ" />
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/textcolor"
+            android:text="Thoát" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -159,24 +168,59 @@
                 android:fontFamily="@font/lato_regular"
                 android:inputType="phone" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/profileedittextshape"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+
+                android:layout_width="56dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/yeonsung"
+                android:text="password"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <EditText
+
+                android:id="@+id/password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:fontFamily="@font/lato_regular"
+                android:inputType="text" />
+        </LinearLayout>
 
 </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/saveinfoButton"
-            android:elevation="5dp"
-            android:layout_marginBottom="32dp"
-            android:textAllCaps="false"
-            android:background="@drawable/proceedbutonshape"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_gravity="bottom"
-            android:textColor="@color/textcolor"
-            android:fontFamily="@font/yeonsung"
-            android:textSize="20dp"
-            android:text="Lưu Thông tin " />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/saveinfoButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/proceedbutonshape"
+        android:elevation="5dp"
+        android:fontFamily="@font/yeonsung"
+        android:text="Lưu Thông tin "
+        android:textAllCaps="false"
+        android:textColor="@color/textcolor"
+        android:textSize="20dp" />
+
+
 
 
 </FrameLayout>
