--- a/app/src/main/res/layout/recent_buy_item.xml
+++ b/app/src/main/res/layout/recent_buy_item.xml
@@ -66,7 +66,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/lato_regular"
-                android:text="Quantity"
+                android:text="Số lượng"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
